# DEEP

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml
docs/: PRD.md
docs/adr/: 0001-stack.md  0002-repo-layout.md  0003-scope-including-mena-global.md  0004-approved-by-default.md  0005-translation-on-demand.md  0006-r3-parser-expansion.md
docs/lia/: README.md
docs/lia/it/: tribunale-milano.md
docs/lia/templates/: eu_gdpr.md
docs/runbooks/: incident.md  onboarding.md
infra/: docker-compose.yaml
infra/alembic/: __init__.py  env.py  orm.py
infra/alembic/versions/: 0001_initial.py  0002_r2_parser_pipeline.py
libs/provenance/: __init__.py  envelope.py  identifiers.py
libs/provenance/tests/: test_provenance.py
libs/schemas/: __init__.py  admin.py  asset.py  common.py  company.py  filing.py  news.py  opportunity.py  proceeding.py  raw.py  source.py  workflow.py
libs/schemas/tests/: test_schemas.py
libs/taxonomy/: __init__.py  categories.py  proceedings.py  proceedings.yaml  source_category_map.yaml
libs/taxonomy/tests/: test_taxonomy.py
scripts/: __init__.py  blueprint_import.py  onboard_source.py  validate_sources.py  verify_selectors.py
services/api/: __init__.py  db.py  main.py  schemas.py  settings.py
services/api/routers/: documents.py  events.py  health.py  proceedings.py  sources.py  user_settings.py
services/api/tests/: test_api.py  test_r2_endpoints.py
services/extract/: __init__.py
services/extract/framework/: __init__.py  base.py  config.py  declarative.py  declarative_xml.py  extractors.py
services/extract/parsers/de/: insolvenzbekanntmachungen.py
services/extract/parsers/es/: prc.py
services/extract/parsers/fr/: _greffe_base.py  bodacc.py  tc_lyon.py  tc_nanterre.py  tc_paris.py
services/extract/parsers/it/: _tribunale_base.py  tribunale_bologna.py  tribunale_firenze.py  tribunale_milano.py  tribunale_napoli.py  tribunale_roma.py  tribunale_torino.py
services/extract/parsers/nl/: insolventieregister.py
services/extract/tests/: test_base_classes.py  test_framework.py
services/ingest/: __init__.py
services/ingest/connectors/: __init__.py  http_scrape.py
services/ingest/core/: __init__.py  base.py  rate_limiter.py  raw_lake.py
services/ingest/tests/: test_connector.py
services/normalize/: __init__.py  pipeline.py
services/normalize/tests/: test_pipeline.py
services/translation/: __init__.py  client.py  contract.py  nllb.py  stub.py
services/translation/tests/: test_translation.py
services/web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
services/web/src/: App.tsx  index.css  main.tsx
services/web/src/api/: client.ts
services/web/src/pages/: Inbox.tsx  ProceedingDetail.tsx  Settings.tsx  SourceRegistry.tsx
sources/: _schema.yaml
sources/de/: amtsgericht-berlin-charlottenburg.yaml  amtsgericht-frankfurt.yaml  amtsgericht-hamburg.yaml  amtsgericht-muenchen.yaml
sources/fr/: tc-lyon.yaml  tc-nanterre.yaml  tc-paris.yaml
sources/it/: tribunale-bologna.yaml  tribunale-firenze.yaml  tribunale-milano.yaml  tribunale-napoli.yaml  tribunale-roma.yaml  tribunale-torino.yaml
tests/canary/de/insolvenzbekanntmachungen/: 001_expected.json  001_raw.html  test_canary.py
tests/canary/es/prc/: 001_raw.xml  test_canary.py
tests/canary/fr/bodacc/: 001_raw.xml  test_canary.py
tests/canary/it/tribunale_milano/: 001_expected.json  001_raw.html  README.md  test_canary.py
tests/canary/nl/insolventieregister/: 001_raw.html  test_canary.py
tests/integration/: test_blueprint_import.py
